crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@loops_in_cairo_m___continue_in_loops.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Loops in Cairo-M - Continue in Loops"
input_file: mdtest/02-control-flow/02-loops.md
---
Source:
fn continue_in_loop() -> felt {
    let sum = 0;
    for (let i = 0; i != 10; i = i + 1) {
        if i == 5 {
            continue;
        }
        sum = sum + i;
    }
    return sum;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn continue_in_loop {
    entry: 0

    0:
      %0 = 0
      %1 = 0
      %5 = %0
      %2 = %1
      jump 1

    1 (for_header):
      ; for_header
      if %2 Neq 10 then jump 2 else jump 4

    2 (for_body):
      ; for_body
      if %2 Eq 5 then jump 5 else jump 6

    3 (for_step):
      ; for_step
      %8 = %2 Add 1
      %5 = %9
      %2 = %8
      jump 1

    4 (for_exit):
      ; for_exit
      return %5

    5 (block_5):
      ; block_5
      %9 = %5
      jump 3

    6 (block_6):
      ; block_6
      %6 = %5 Add %2
      %9 = %6
      jump 3

  }

}
