crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@loops_in_cairo_m___for_loop.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Loops in Cairo-M - For Loop"
input_file: mdtest/02-control-flow/02-loops.md
---
Source:
fn sum_to_n() -> felt {
    let sum = 0;
    for (let i = 0; i != 10; i = i + 1) {
        sum = sum + i;
    }
    return sum;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn sum_to_n {
    entry: 0

    0:
      %0 = 0
      %1 = 0
      %4 = %0
      %2 = %1
      jump 1

    1 (for_header):
      ; for_header
      if %2 Neq 10 then jump 2 else jump 4

    2 (for_body):
      ; for_body
      %5 = %4 Add %2
      jump 3

    3 (for_step):
      ; for_step
      %6 = %2 Add 1
      %4 = %5
      %2 = %6
      jump 1

    4 (for_exit):
      ; for_exit
      return %4

  }

}
