crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@loops_in_cairo_m___loop_with_break.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Loops in Cairo-M - Loop with Break"
input_file: mdtest/02-control-flow/02-loops.md
---
Source:
fn loop_with_break() -> felt {
    let i = 10;
    loop {
        if i == 7 || i == 0 {
            break;
        }
        i = i - 1;
    }
    return i;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn loop_with_break {
    entry: 0

    0:
      %0 = 10
      %1 = %0
      jump 1

    1 (block_1):
      ; block_1
      %2 = %1 == 7
      %3 = %1 == 0
      %4 = %2 || %3
      if %4 then jump 3 else jump 4

    2 (block_2):
      ; block_2
      return %1

    3 (block_3):
      ; block_3
      jump 2

    4 (block_4):
      ; block_4
      %5 = %1 - 1
      %1 = %5
      jump 1

  }

}
