crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@loops_in_cairo_m___while_loop.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Loops in Cairo-M - While Loop"
input_file: mdtest/02-control-flow/02-loops.md
---
Source:
fn count_down() -> felt {
    let x = 10;
    let count = 0;
    while (x != 0) {
        x = x - 1;
        count = count + 1;
    }
    return count;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn count_down {
    entry: 0

    0:
      %0 = 10
      %1 = 0
      jump 1

    1:
      if %0 then jump 2 else jump 3

    2:
      %3 = %0 Sub 1
      store %0, %3
      %4 = %1 Add 1
      store %1, %4
      jump 1

    3:
      return %1

  }

}
